@startuml auth-state
' Context: auth
' Profile: client
' Revision: 2026-07-27
' Statechart: AuthUiState (bootstrapping, noSession, sessionActive, overlayVisible, authOperationInProgress)

title Auth — overlay credenziali

state Bootstrapping
state NoSession
state SessionActive
state OverlayVisible
state AuthOperationInProgress

[*] --> Bootstrapping

Bootstrapping --> Bootstrapping : BootstrapStarted
Bootstrapping --> NoSession : BootstrapCompleted\n[!hasOpenAccounts]
Bootstrapping --> SessionActive : BootstrapCompleted\n[hasOpenAccounts]

NoSession --> AuthOperationInProgress : AuthOperationStarted\n[SignIn / SignUp]
OverlayVisible --> AuthOperationInProgress : AuthOperationStarted\n[SignIn / SignUp]

SessionActive --> OverlayVisible : OverlayOpenRequested\n[dismissible]
SessionActive --> NoSession : OverlayOpenRequested\n[!dismissible]
SessionActive --> NoSession : LastAccountRemoved

OverlayVisible --> SessionActive : OverlayCloseRequested

AuthOperationInProgress --> SessionActive : AuthOperationCompleted\n[success]
AuthOperationInProgress --> NoSession : AuthOperationFailed\n[pre: NoSession]
AuthOperationInProgress --> OverlayVisible : AuthOperationFailed\n[pre: OverlayVisible]
AuthOperationInProgress --> SessionActive : AuthOperationFailed\n[pre: SessionActive]

note right of AuthOperationInProgress
  ValidationRejected prima di AuthOperationStarted
  non entra in AuthOperationInProgress.
  RequestPasswordReset non cambia AuthUiState.
end note

@enduml
